# CSP

./: README.md  pyproject.toml
examples/: nacl.cif
src/csp_xrd/: __init__.py  cli.py  pipeline.py  smiles.py  web.py
src/csp_xrd/templates/: index.html
tests/: test_pipeline.py
